--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@gatsby-contrib/gatsby-plugin-elasticlunr-search": "^3.0.2",
     "@theme-ui/color": "^0.6.0",
     "gatsby": "^3.1.2",
+    "gatsby-plugin-canonical-urls": "^3.14.0",
     "gatsby-plugin-google-analytics": "^3.1.0",
     "gatsby-plugin-image": "^1.1.2",
     "gatsby-plugin-manifest": "^3.1.0",
@@ -49,6 +50,5 @@
     "react-helmet": "^6.0.0",
     "react-icons": "^3.11.0",
     "theme-ui": "^0.6.0"
-  },
-  "devDependencies": {}
+  }
 }
